--- a/index.html
+++ b/index.html
@@ -3,118 +3,109 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" type="text/css" href="test.css">
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
-  <title>Frontend Mentor | E-commerce product page</title>
-
+  <!-- <link href="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+  <script src="https://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> -->
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  
+  <title>Frontend Mentor | E-commerce product page</title>
 </head>
 <body>
 
- <!-- en tête -->
-
+ <!-- -------------------------------------------------------------------en tête --------------------------------------------------------------------->
 <div class="header">
-
-  <nav class="menu">
-
+  <nav>
     <img class="panier" src="images/icon-cart.svg" alt="panier">
     <span id="counter">0</span>
-    <i data-feather="shopping-cart"></i>
-    <img class="logo_avatar" src="images/image-avatar.png" alt="image/icon">
-    <img class="logo_sneakers" src="images/logo.svg" alt="logo/sneakers">
-
-  <ul>
-    
+    <img class="logo_avatar logo" src="images/image-avatar.png" alt="image/icon">
+    <img class="logo_sneakers lo_image" src="images/logo.svg" alt="logo/sneakers">
+    <div class="toggle">
+      <img class="ouvrir" src="images/icon-menu.svg" alt="menu">
+      <img class="fermer" src="images/icon-close.svg" alt="menu">
+    </div>
+  <ul class="menu">
     <li><a href="#">Collections</a></li>
     <li><a href="#">Men</a></li>
     <li><a href="#">Women</a></li>
     <li><a href="#">About</a></li>
     <li><a href="#">Contact</a></li>
-
   </ul>
 </nav>
 </div>
-
-<!-- text et prix -->
+<!-- -------------------------------------------------------------------text et prix------------------------------------------------------------------- -->
 <div class="text">
     <p id="text1">Sneaker Company</p> 
     <p id="text2">Fall Limited Edition <br> Sneakers</p> 
     <p id="text3">These low-profile sneakers are your perfect casual wear <br> companion. Featuring a durable rubber outer sole, they’ll <br> withstand everything the weather can offer.</p>  
-
   <div class="prix">
     <p class="p1">$125.00</p>  
     <p class="p3">$250.00</p> 
     <p class="p2">50%</p> 
   </div>
-<!-- compteur -->
-
+<!-- -------------------------------------------------------------------compteur------------------------------------------------------------------- -->
 <div class="flex-centre">
-  <div class="quantity buttons_added">
-    <input type="image" src="images/icon-minus.svg" value="-" class="minus" >
-    <input type="number" step="1" min="0" max="" name="quantity" value="0" title="Qty" class="input-text qty text" size="4" pattern="" inputmode="">
-    <input type="image" src="images/icon-plus.svg" value="+" class="plus" id="plus">
-  </div>
-  <div>
-       <button id="add-animation">Add to cart</button> 
-  </div>
-
+  <div class="container">
+    <div class="counter2-container">
+      <div class="cont">
+        <div id="counter-two" class="counter" min="0" max="" step="1"></div>
+      </div>
+        <button class="c2-btn" onclick="onC2BtnClick()"><img class="imag" src="images/icon-cart.svg" alt=""> Add to cart</button> 
+    </div>
 </div>
 </div>
-<div class="product-images">
-  <!-- Large, currently-active image -->
-  <div class="current-image">
-    <a href="https://accessible360.com">
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3609497/blanca-paloma-sanchez-500x500.jpg" alt="Succulents 1">
-    </a>
-  </div>
-
-  <!-- Thumbnail track -->
-  <div class="thumbnails">
-    <div class="thumbnail">
-      <button class="thumbnail-button" aria-current="true">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3609497/blanca-paloma-sanchez-500x500.jpg" alt="image 1 of 5" data-full-alt="Succulents 1">
-      </button>
-    </div>
-
-    <div class="thumbnail">
-      <button class="thumbnail-button">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3609497/erol-ahmed-500x500.jpg" alt="image 2 of 5" data-full-alt="Succulents 2">
-      </button>
-    </div>
-
-    <div class="thumbnail">
-      <button class="thumbnail-button">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3609497/armando-castillejo-500x500.jpg" alt="image 3 of 5" data-full-alt="Succulents 3">
-      </button>
-    </div>
-
-    <div class="thumbnail">
-      <button class="thumbnail-button">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3609497/calle-macarone-500x500.jpg" alt="image 4 of 5" data-full-alt="Succulents 4">
-      </button>
-    </div>
-
-    <div class="thumbnail">
-      <button class="thumbnail-button">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3609497/annie-spratt-500x500.jpg" alt="image 5 of 5" data-full-alt="Succulents 5">
-      </button>
-    </div>
+</div>
+<!-- -------------------------------------------------------------------image carousel------------------------------------------------------------------- -->
+<div class="wrapper">
+  <div class="carousel-container">
+    <ul class="carousel">
+      <li><img class="img1"src="images/image-product-1.jpg"></li>
+      <li><img class="img2"src="images/image-product-2.jpg"></li>
+      <li><img class="img3"src="images/image-product-3.jpg"></li>
+      <li><img class="img4"src="images/image-product-4.jpg"></li>
+    </ul>
   </div>
 </div>
-
-<a href="https://accessible360.com" class="credits" target="_blank">
-  Built by <b><u>Accessible360</u></b> <img src="https://assets.codepen.io/3609497/accessible360-logo-black.png" alt="">
-</a>
-
-
-
-<script data-require="jquery@3.1.1" data-semver="3.1.1" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="test.css" />
-    <script src="index.js"></script>
-   
-
+<!-- -------------------------------------------------------------carousel responsive------------------------------------------------------------- -->
+<div class="slider">
+  <img src="images/image-product-1.jpg" alt="img1" class="img__slider active"/>
+  <img src="images/image-product-2.jpg" alt="img2" class="img__slider "/>
+  <img src="images/image-product-3.jpg" alt="img3" class="img__slider "/>
+  <img src="images/image-product-4.jpg" alt="img4" class="img__slider "/>
+  <div class="suivant">
+    <i class="fa-solid fa-circle-chevron-right"></i>
+  </div>
+  <div class="precedent">
+    <i class="fa-solid fa-circle-chevron-left"></i>
+  </div>
+</div>
+<!--------------------------------------------------------------------- script------------------------------------------------------------------- -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="index.js"></script>
+<script type="text/javascript" src="plugin.js"></script>
+<script data-require="jquery@3.1.1" data-semver="3.1.1" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>  
+<script type="text/javascript" src="plugin.js"></script>
 </body>
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36251023-1']);
+  _gaq.push(['_setDomainName', 'jqueryscript.net']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
+<script type="text/javascript">
+  $("#counter-two").htmlNumberSpinner();
+function onC2BtnClick() {
+    var value = $("#counter-two").getSpinnerValue();
+    $('#counter').text(value);
+}
+  /*End Number Input Spinner With Attributes*/
+</script>
 </html>
